<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Dance">Dance</string>
    <string name="Settings">Settings</string>
    <string name="Resources">Resources</string>
    <string name="Back">Back</string>
    <string name="play">play</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="C1">C1</string>
    <string name="C2">C2</string>
    <string name="C3">C3</string>
    <string name="C4">C4</string>
    <string name="app_name">Pact</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_resources">Resources</string>
    <string name="title_activity_dance">Dance</string>
    <string name="title_activity_selection">Selection</string>
    <string name="Download">Download</string>
    <string name="Upload">Upload</string>
    <string name="music_1">Music 1</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="preview_1">Preview C1</string>
    <string name="preview_2">Preview C2</string>
    <string name="music_2">Music 2</string>
    <string name="pause">Pause</string>
    <string name="start_recording">Start Recording</string>
    <string name="loop">Loop</string>
    <string name="selection">Selection</string>
    <string name="ok">OK</string>
    <string name="preview1">preview1</string>
    <string name="save_your_music">Save your music!</string>
    <string name="please_type_the_name_of_your_creation">Please type the name of your creation</string>
    <string name="send">Send</string>
    <string name="title_activity_custom_spinner">CustomSpinner</string>
    <string name="hello">Custom Spinner</string>
    <string name="metro">Métronome</string>
    <string name="defaultText">  Select your Sound  </string>

    <drawable name="Blue">#b0e0e6</drawable>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#cccccc</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>

    <string name="select_Category">Select Sound</string>

    <drawable name="darkgrey">#606060</drawable>

    <string name="preview">Preview</string>
    <string name="title_activity_popup">PopupActivity</string>
    <string name="title_activity_save_popup">SavePopupActivity</string>
    <string name="title_activity_online_resources">OnlineResources</string>
    <string name="connect">Connect</string>

</resources>
