<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/danse"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pact.Dance" >

    <Spinner
            android:id="@+id/spinnerSensorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawSelectorOnTop="true" />
    
    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerSensor1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawSelectorOnTop="true" />

                <Button
                    android:id="@+id/buttonPreview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:background="@drawable/button"
                    android:text="@string/preview"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerSensor2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawSelectorOnTop="true" />

                <Button
                    android:id="@+id/buttonPreview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:background="@drawable/button"
                    android:text="@string/preview"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerSensor3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawSelectorOnTop="true" />

                <Button
                    android:id="@+id/buttonPreview3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:background="@drawable/button"
                    android:text="@string/preview"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerSensor4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawSelectorOnTop="true" />

                <Button
                    android:id="@+id/buttonPreview4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:background="@drawable/button"
                    android:text="@string/preview"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            style="@drawable/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/save"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/play"
            android:text="@string/play"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/loop"
            android:text="@string/loop"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/record"
            android:text="@string/start_recording"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/pause"
            android:text="@string/pause"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/stop"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <Button
            android:id="@+id/metronom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/stop"
            android:text="@string/metro"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:format="%s"
            android:textSize="15sp" />

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:format="%s"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/listView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >
        </ListView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/bSend"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:text="Send"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>